--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,13 @@
+# .env.example - DO NOT COMMIT REAL KEYS
+PORT=5000
+MONGO_URI=mongodb+srv://<username>:<password>@cluster.mongodb.net/dora
+JWT_SECRET=your_strong_secret_here
+JWT_EXPIRE=7d
 
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
+TWILIO_SID=your_twilio_sid
+TWILIO_TOKEN=your_twilio_token
+TWILIO_PHONE=your_phone_number
